TODO THIS UPDATE: 
- handbook entry
- localisation